<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Attendance2</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="attendance">ATTENDANCE</string>
    <string name="date">DATE</string>
    <string name="add">ADD</string>
    <string name="view">VIEW</string>
    <string name="submit">SUBMIT</string>

</resources>
